# chess-ml

./: .gitignore  pyproject.toml  test_main.py
src/: __init__.py  __main__.py  actor_critic.py  environment.py  policy_gradients.py  residual_conv.py  test_environment.py
