[project]
name = "mckinsey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chess>=1.11.2",
    "jupyter>=1.1.1",
    "lightning>=2.5.5",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "torch>=2.8.0",
    "torchrl>=0.9.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
